--- a/playbooks/django-install-microk8s-userSystem.yml
+++ b/playbooks/django-install-microk8s-userSystem.yml
@@ -89,3 +89,6 @@
     command: microk8s.kubectl apply -f k8s/django/mailhog.yaml
     args:
       chdir: /home/it21906/userSystem
+      
+  - name: restart
+    shell : "sudo reboot"
