--- a/playbooks/django-project-install-userSystem.yml
+++ b/playbooks/django-project-install-userSystem.yml
@@ -164,6 +164,9 @@
         path: /etc/nginx/sites-enabled/default
         state: absent
       notify: restart nginx
+      
+    - name: restart
+      shell : "reboot"
 
     become: yes
     become_user: root
