--- a/playbooks/django-install-microk8s-userSystem.yml
+++ b/playbooks/django-install-microk8s-userSystem.yml
@@ -89,3 +89,8 @@
     command: microk8s.kubectl apply -f k8s/django/mailhog.yaml
     args:
       chdir: /home/it21906/userSystem
+      
+         
+  - name: Restart
+    ansible.builtin.reboot:
+      reboot_timeout: 3600
