--- a/playbooks/django-install-microk8s-userSystem.yml
+++ b/playbooks/django-install-microk8s-userSystem.yml
@@ -92,6 +92,8 @@
       
   - name: fix readonly
     shell : "chown it21906 db.sqlite3"
+    args:
+      chdir: /home/it21906/userSystem
       
          
   - name: Restart
