--- a/playbooks/django-install-microk8s-userSystem.yml
+++ b/playbooks/django-install-microk8s-userSystem.yml
@@ -91,7 +91,7 @@
       chdir: /home/it21906/userSystem
       
   - name: fix readonly
-    shell : "chown it21906 db.sqlite3"
+    command : "chown it21906 db.sqlite3"
     args:
       chdir: /home/it21906/userSystem
       
