--- a/playbooks/django-project-install-userSystem.yml
+++ b/playbooks/django-project-install-userSystem.yml
@@ -103,6 +103,8 @@
         
     - name: give rights
       shell: chmod +x {{app_dir}}/userSystem/manage.py
+      become: yes
+      become_user: root
 
     - name: make migrations
       django_manage:
